[package]
name = "pisky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pisky"
crate-type = ["cdylib"]

[net]
git-fetch-with-cli=true

[dependencies]
pyo3 = "0.24.0"
pyo3-bytes = "0.2.0"
disky = { path = "../disky" , features = ["parallel"] }