[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pisky-benchmarks"
version = "0.1.0"
description = "Performance benchmarks comparing pisky with array_record"
requires-python = ">=3.8"
dependencies = [
    "pisky @ git+ssh://git@github.com/jonasrsv42/pisky.git@v0.4.0",
    "array-record",
    "numpy",
    "tqdm",
    "tabulate"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]