[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pisky-consumer-example"
version = "0.1.0"
description = "Example project that consumes pisky from GitHub releases"
requires-python = ">=3.8"
dependencies = [
    "pisky @ git+ssh://git@github.com/jonasrsv42/pisky.git@v0.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]